--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,6 @@
-absl-py==2.2.0
-acpype==2023.10.27
-altair==5.5.0
-AmberUtils==21.0
-astunparse==1.6.3
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.8
-contourpy==1.3.0
-cycler==0.12.1
-dgl==2.2.0
-filelock==3.16.1
-flatbuffers==25.2.10
-fonttools==4.53.1
-fsspec==2024.10.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-grpcio==1.71.0
-h5py==3.13.0
-idna==3.10
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keras==3.9.0
-kiwisolver==1.4.7
-libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-mdurl==0.1.2
-meeko==0.5.1
-ml-dtypes==0.3.2
-mpmath==1.3.0
-namex==0.0.8
-narwhals==1.32.0
-networkx==3.4.2
-numpy==1.25.0
-openbabel-wheel==3.1.1.20
-opt_einsum==3.4.0
-optree==0.14.1
-packaging==24.1
-packmol-memgen==1.2.1rc0
-pandas==2.2.2
-pdb4amber==20.1
-pillow==10.4.0
-protobuf==4.25.6
-psutil==6.1.0
-pyarrow==19.0.1
-pydeck==0.9.1
-Pygments==2.19.1
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pytraj==2.0.6
-pytz==2024.1
-rdkit==2024.3.5
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.23.1
-sander==16.0
-scikit-learn==1.5.2
-scipy==1.14.1
-six==1.16.0
-smmap==5.0.2
-streamlit==1.43.2
-sympy==1.13.3
-tabulate==0.9.0
-tenacity==9.0.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.2
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
-threadpoolctl==3.5.0
-toml==0.10.2
-torch==2.2.2
-torchdata==0.7.1
-tornado==6.4.2
-tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.3
-vina==1.2.5
-Werkzeug==3.1.3
-wrapt==1.17.2
-xgboost==3.0.0
+streamlit
+pandas
+numpy
+scikit-learn
+xgboost
+rdkit
